fix(#30): update config to tag commit after merge

--- a/.github/workflows/github-action-ci.yml
+++ b/.github/workflows/github-action-ci.yml
@@ -23,10 +23,16 @@ jobs:
           with:
             versionSpec: '5.x'
         - uses: gittools/actions/gitversion/execute@v0
+          id: get_version
           name: Determine Version
           with:
             useConfigFile: true
             configFilePath: '.gitversion'
+        - name: Create Tag
+          if: github.event.pull_request.merged == true
+          run: |
+            git tag -a ${{ steps.get_version.outputs.semver }} -m "Created tag for merged pull request"
+            git push origin ${{ steps.get_version.outputs.semver }}
 
   build:
     runs-on: ubuntu-latest
