--- a/.github/workflows/github-action-ci.yml
+++ b/.github/workflows/github-action-ci.yml
@@ -1,5 +1,4 @@
 # This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go-CLI-Build
 
@@ -9,12 +8,13 @@ on:
   pull_request:
     branches: [ "main" ]
 
+
 jobs:
   version:
     runs-on: ubuntu-latest
 
     steps:
-        - uses: actions/checkout@v3
+        - uses: actions/checkout@v4
           name: Checkout
           with:
             fetch-depth: 0
@@ -28,11 +28,7 @@ jobs:
           with:
             useConfigFile: true
             configFilePath: '.gitversion'
-        - name: Create Tag
-          if: github.event.pull_request.merged == true
-          run: |
-            git tag -a ${{ steps.get_version.outputs.semver }} -m "Created tag for merged pull request"
-            git push origin ${{ steps.get_version.outputs.semver }}
+        
 
   build:
     runs-on: ubuntu-latest
@@ -48,7 +44,7 @@ jobs:
       run: go get .
         
     - name: Build
-      run: go build -v ./...
+      run: go build -o task-cli
 
     #- name: Test
     #  run: go test -v ./...
