ci(#36): update workflow to test dependencies

--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -7,11 +7,32 @@ on:
       - main
 
 jobs:
-  build:
+  version:
+    runs-on: ubuntu-latest
+
+    steps:
+        - uses: actions/checkout@v4
+          name: Checkout
+          with:
+            fetch-depth: 0
+        - uses: gittools/actions/gitversion/setup@v0
+          name: Install Giversion 5.x
+          with:
+            versionSpec: '5.x'
+        - uses: gittools/actions/gitversion/execute@v0
+          id: get_version
+          name: Determine Version
+          with:
+            useConfigFile: true
+            configFilePath: '.gitversion'
+  taggin:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    needs: version
     permissions:
       contents: write
+    env:
+      semVer: ${{ needs.version.outputs.fullSemVer }}
     steps:
     - uses: actions/checkout@v4
       with:
@@ -24,3 +45,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
         WITH_V: true
         DRY_RUN: true
+        CUSTOM_TAG : ($env:semVer)
