--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -25,7 +25,7 @@ jobs:
           with:
             useConfigFile: true
             configFilePath: '.gitversion'
-  taggin:
+  tagging:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: version
@@ -45,4 +45,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
         WITH_V: true
         DRY_RUN: true
-        CUSTOM_TAG : ($env:semVer)
+        CUSTOM_TAG : ${{ needs.version.outputs.MajorMinorPatch }}
