--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -9,7 +9,9 @@ on:
 jobs:
   version:
     runs-on: ubuntu-latest
-
+    outputs:
+      fullsemver: ${{ steps.get_version.outputs.fullSemVer }}
+      semVer: ${{ steps.get_version.outputs.MajorMinorPatch }}
     steps:
         - uses: actions/checkout@v4
           name: Checkout
@@ -32,7 +34,7 @@ jobs:
     permissions:
       contents: write
     env:
-      semVer: ${{ needs.version.outputs.fullSemVer }}
+      semVer: ${{ needs.version.outputs.MajorMinorPatch }}
     steps:
     - uses: actions/checkout@v4
       with:
@@ -45,4 +47,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
         WITH_V: true
         DRY_RUN: true
-        CUSTOM_TAG : ${{ needs.version.outputs.MajorMinorPatch }}
+        CUSTOM_TAG : $env:semVer
