chore(#42): update variable outputs

--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -34,7 +34,7 @@ jobs:
     permissions:
       contents: write
     env:
-      semVer: ${{ needs.version.outputs.MajorMinorPatch }}
+      semVer: ${{ needs.version.outputs.semVer }}
     steps:
     - uses: actions/checkout@v4
       with:
