--- a/.github/workflows/github-action-ci.yml
+++ b/.github/workflows/github-action-ci.yml
@@ -12,7 +12,9 @@ on:
 jobs:
   version:
     runs-on: ubuntu-latest
-
+    outputs:
+      fullsemver: ${{ steps.get_version.outputs.fullSemVer }}
+      semVer: ${{ steps.get_version.outputs.MajorMinorPatch }}
     steps:
         - uses: actions/checkout@v4
           name: Checkout
@@ -33,6 +35,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: version
+    env:
+      semVer: ${{ needs.version.outputs.semVer }}
     steps:
     - uses: actions/checkout@v4
 
@@ -46,6 +50,9 @@ jobs:
         
     - name: Build
       run: go build -o task-cli
-
+    - name: Display current version
+      run: |
+        echo "Version env: ${{env.semVer}}"
+        echo "Version local: ${{ needs.version.outputs.semVer }}"
     #- name: Test
     #  run: go test -v ./...
