--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -47,11 +47,9 @@ jobs:
         fetch-depth: '0'
 
     - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@v1 
+      uses: laputansoft/github-tag-action@v4.6 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
-        WITH_V: true
+        tag: ${{ env.semVer }}
         DRY_RUN: true
-        MAJOR_STRING_TOKEN: ${{ env.major }}
-        MINOR_STRING_TOKEN: ${{ env.minor }}
-        PATCH_STRING_TOKEN: ${{ env.patch }}
+
