chore(#46): test in the pull request

--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -2,7 +2,8 @@ name: Update version
 on:
   pull_request:
     types:
-      - closed
+      - opened
+      - edited
     branches:
       - main
 
