--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -2,8 +2,7 @@ name: Update version
 on:
   pull_request:
     types:
-      - opened
-      - edited
+      - closed
     branches:
       - main
 
@@ -31,6 +30,7 @@ jobs:
             useConfigFile: true
             configFilePath: '.gitversion'
   tagging:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     needs: version
     permissions:
@@ -46,10 +46,10 @@ jobs:
         ref: ${{ github.event.pull_request.merge_commit_sha }}
         fetch-depth: '0'
 
-    - name: Bump version and push tag
-      uses: laputansoft/github-tag-action@v4.6 
+    - name: Update version and push tag
+      uses: rickstaa/action-create-tag@v1 
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
         tag: ${{ env.semVer }}
-        DRY_RUN: true
+        
 
