--- a/.github/workflows/github-version-tag.yml
+++ b/.github/workflows/github-version-tag.yml
@@ -46,12 +46,10 @@ jobs:
         ref: ${{ github.event.pull_request.merge_commit_sha }}
         fetch-depth: '0'
 
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@v1 
-      env:
+    - name: Update version and push tag
+      uses: rickstaa/action-create-tag@v1 
+      with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # if you don't want to set write permissions use a PAT token
-        WITH_V: true
-        DRY_RUN: true
-        MAJOR_STRING_TOKEN: ${{ env.major }}
-        MINOR_STRING_TOKEN: ${{ env.minor }}
-        PATCH_STRING_TOKEN: ${{ env.patch }}
+        tag: ${{ env.semVer }}
+        
+
